--- a/PetProject/Storyboards/Base.lproj/Main.storyboard
+++ b/PetProject/Storyboards/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="S1s-Dp-PEb">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -86,8 +85,56 @@
                     <view key="view" contentMode="scaleToFill" id="1dW-xY-v3E">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="37" translatesAutoresizingMaskIntoConstraints="NO" id="SpQ-E3-E9S">
+                                <rect key="frame" x="16" y="208" width="288" height="232"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nuw-Lo-Ms0">
+                                        <rect key="frame" x="0.0" y="0.0" width="288" height="28"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Button">
+                                            <fontDescription key="titleFontDescription" name="Helvetica" family="Helvetica" pointSize="12"/>
+                                        </buttonConfiguration>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wMN-lK-3UX">
+                                        <rect key="frame" x="0.0" y="65" width="288" height="31"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7I1-bG-NWU">
+                                        <rect key="frame" x="0.0" y="133" width="288" height="31"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hdA-ec-2KI">
+                                        <rect key="frame" x="0.0" y="201" width="288" height="31"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6wy-SX-mCr">
+                                <rect key="frame" x="16" y="64" width="288" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="r9r-yF-ZD2">
+                                <rect key="frame" x="0.0" y="44" width="320" height="4"/>
+                            </progressView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="WCP-Dl-ds4"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="WCP-Dl-ds4" firstAttribute="trailing" secondItem="6wy-SX-mCr" secondAttribute="trailing" constant="16" id="5eu-aM-IFA"/>
+                            <constraint firstItem="WCP-Dl-ds4" firstAttribute="trailing" secondItem="SpQ-E3-E9S" secondAttribute="trailing" constant="16" id="8dF-x8-wyi"/>
+                            <constraint firstItem="6wy-SX-mCr" firstAttribute="leading" secondItem="WCP-Dl-ds4" secondAttribute="leading" constant="16" id="JQq-cG-Fhg"/>
+                            <constraint firstItem="WCP-Dl-ds4" firstAttribute="trailing" secondItem="r9r-yF-ZD2" secondAttribute="trailing" id="L8a-c5-Rgy"/>
+                            <constraint firstItem="6wy-SX-mCr" firstAttribute="top" secondItem="r9r-yF-ZD2" secondAttribute="bottom" constant="16" id="ZgB-O8-Z5P"/>
+                            <constraint firstItem="SpQ-E3-E9S" firstAttribute="centerY" secondItem="1dW-xY-v3E" secondAttribute="centerY" constant="40" id="gl5-SM-cDr"/>
+                            <constraint firstItem="r9r-yF-ZD2" firstAttribute="top" secondItem="WCP-Dl-ds4" secondAttribute="top" id="jJM-0y-ZE9"/>
+                            <constraint firstItem="r9r-yF-ZD2" firstAttribute="leading" secondItem="WCP-Dl-ds4" secondAttribute="leading" id="qJq-S7-WNV"/>
+                            <constraint firstItem="SpQ-E3-E9S" firstAttribute="leading" secondItem="WCP-Dl-ds4" secondAttribute="leading" constant="16" id="zPF-45-Xjh"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Вопрос №" id="MjN-zt-Lj1"/>
                 </viewController>
@@ -104,7 +151,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <textAttributes key="titleTextAttributes">
-                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                         </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
